<resources>
    <string name="app_name">PicArt</string>
    <string name="app_id">1139223476094486</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Inregistrare</string>
    <string name="textview_welcome">PicArt</string>
    <string name="textview_username">Utilizator</string>
    <string name="textview_password">Parola</string>
    <string name="login_btn">Autentificare</string>
    <string name="register_btn">Inregistrare</string>
    <string name="textview_register_username">Utilizator</string>
    <string name="textview_register_password">Parola</string>
    <string name="textview_register_please">Te rugam sa te inregistrezi!</string>
    <string name="register2_btn">Inregistrare</string>
    <string name="title_activity_menu"></string>
    <string name="login_button">Log in with Facebook</string>
    <string name="welcome_msg">Bine ai venit !</string>
    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="btn_gallery">Galerie</string>
    <string name="btn_qr">Scaneaza QR</string>
    <string name="btn_about">Despre</string>
    <string name="title_activity_gallery">Galerie</string>
    <string name="title_activity_displaypic"></string>
    <string name="test_text">CEVA SCRIS DE MINE</string>

</resources>
